--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "@extrusionsim/client",
-	"version": "1.0.1",
+	"version": "1.0.2",
 	"description": "Official TypeScript/JavaScript client library for EIS Simulation API",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
@@ -36,7 +36,7 @@
 	"license": "MIT",
 	"repository": {
 		"type": "git",
-		"url": "https://github.com/extrusionsim/client.git"
+		"url": "git+https://github.com/extrusionsim/client.git"
 	},
 	"bugs": {
 		"url": "https://github.com/extrusionsim/client/issues"
