--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
 	"name": "@extrusionsim/client",
 	"version": "1.0.7",
 	"description": "Official TypeScript/JavaScript client library for EIS Simulation API",
+	"type": "module",
 	"main": "dist/index.js",
 	"types": "dist/index.d.ts",
 	"files": [
